add one comment on pd.get_dummies

--- a/Practical-03.ipynb
+++ b/Practical-03.ipynb
@@ -385,7 +385,12 @@
     "\n",
     "While there are other ways of handling categorical variables in machine learning, we will stick to one-hot encoding, as it is easy to understand and appropriate for medium-size datasets (sample size <10000).\n",
     "\n",
-    "First, we need to convert categorical variables into dummy/indicator variables, using `One-Hot Encoding`."
+    "First, we need to convert categorical variables into dummy/indicator variables, using `One-Hot Encoding`.\n",
+    "\n",
+    "`pandas.get_dummies(data, prefix=None, prefix_sep='_', dummy_na=False, columns=None, sparse=False, drop_first=False, dtype=None)`:\n",
+    "\n",
+    "- <font color=#DE3163> `drop_first`改为True,会直接删除第一个dummy variable,很方便；\n",
+    "- <font color=#DE3163>`dtype`默认为bool,可以改为`int`"
    ]
   },
   {
@@ -394,6 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#\n",
     "bike_rental_numeric = pd.get_dummies(bike_rental)"
    ]
   },
