--- a/Practical-07.ipynb
+++ b/Practical-07.ipynb
@@ -2833,7 +2833,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "You can find the mapping from the four clusters to the clusters in the above dendrogram, using the number of points in each cluster.\n",
     "\n",
