update wk8 practical

--- a/Practical-08.ipynb
+++ b/Practical-08.ipynb
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last executed: 2025-03-11 09:58:21\n"
+      "Last executed: 2025-03-12 10:32:32\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,16 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#去除B：黑人占比\n",
     "boston = boston.drop(['B'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +482,7 @@
        "max                                    50.0000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,19 +535,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`fit_transform`缩放到（0，1）"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# standardisation of the X. This is essential for PCA.\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "X = StandardScaler().??(X)"
+    "X = StandardScaler().fit_transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +978,7 @@
        "11                                   0.0258  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,33 +997,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting bioinfokit\n",
-      "  Downloading bioinfokit-2.1.4.tar.gz (88 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: pandas in /opt/conda/lib/python3.11/site-packages (from bioinfokit) (2.2.2)\n",
+      "Requirement already satisfied: bioinfokit in /opt/conda/lib/python3.11/site-packages (2.1.4)\n",
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.11/site-packages (from bioinfokit) (2.2.2)\n",
       "Requirement already satisfied: numpy in /opt/conda/lib/python3.11/site-packages (from bioinfokit) (1.26.4)\n",
       "Requirement already satisfied: matplotlib in /opt/conda/lib/python3.11/site-packages (from bioinfokit) (3.8.4)\n",
       "Requirement already satisfied: scipy in /opt/conda/lib/python3.11/site-packages (from bioinfokit) (1.13.1)\n",
       "Requirement already satisfied: scikit-learn in /opt/conda/lib/python3.11/site-packages (from bioinfokit) (1.5.2)\n",
       "Requirement already satisfied: seaborn in /opt/conda/lib/python3.11/site-packages (from bioinfokit) (0.13.2)\n",
-      "Collecting matplotlib-venn (from bioinfokit)\n",
-      "  Downloading matplotlib-venn-1.1.2.tar.gz (40 kB)\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: tabulate in /opt/conda/lib/python3.11/site-packages (from bioinfokit) (0.9.0)\n",
+      "Requirement already satisfied: matplotlib-venn in /opt/conda/lib/python3.11/site-packages (from bioinfokit) (1.1.2)\n",
+      "Requirement already satisfied: tabulate in /opt/conda/lib/python3.11/site-packages (from bioinfokit) (0.9.0)\n",
       "Requirement already satisfied: statsmodels in /opt/conda/lib/python3.11/site-packages (from bioinfokit) (0.14.3)\n",
-      "Collecting textwrap3 (from bioinfokit)\n",
-      "  Downloading textwrap3-0.9.2-py2.py3-none-any.whl.metadata (4.6 kB)\n",
-      "Collecting adjustText (from bioinfokit)\n",
-      "  Downloading adjustText-1.3.0-py3-none-any.whl.metadata (3.1 kB)\n",
+      "Requirement already satisfied: textwrap3 in /opt/conda/lib/python3.11/site-packages (from bioinfokit) (0.9.2)\n",
+      "Requirement already satisfied: adjustText in /opt/conda/lib/python3.11/site-packages (from bioinfokit) (1.3.0)\n",
       "Requirement already satisfied: contourpy>=1.0.1 in /opt/conda/lib/python3.11/site-packages (from matplotlib->bioinfokit) (1.3.0)\n",
       "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.11/site-packages (from matplotlib->bioinfokit) (0.12.1)\n",
       "Requirement already satisfied: fonttools>=4.22.0 in /opt/conda/lib/python3.11/site-packages (from matplotlib->bioinfokit) (4.53.1)\n",
@@ -1029,19 +1029,7 @@
       "Requirement already satisfied: joblib>=1.2.0 in /opt/conda/lib/python3.11/site-packages (from scikit-learn->bioinfokit) (1.4.2)\n",
       "Requirement already satisfied: threadpoolctl>=3.1.0 in /opt/conda/lib/python3.11/site-packages (from scikit-learn->bioinfokit) (3.5.0)\n",
       "Requirement already satisfied: patsy>=0.5.6 in /opt/conda/lib/python3.11/site-packages (from statsmodels->bioinfokit) (0.5.6)\n",
-      "Requirement already satisfied: six in /opt/conda/lib/python3.11/site-packages (from patsy>=0.5.6->statsmodels->bioinfokit) (1.16.0)\n",
-      "Downloading adjustText-1.3.0-py3-none-any.whl (13 kB)\n",
-      "Downloading textwrap3-0.9.2-py2.py3-none-any.whl (12 kB)\n",
-      "Building wheels for collected packages: bioinfokit, matplotlib-venn\n",
-      "  Building wheel for bioinfokit (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for bioinfokit: filename=bioinfokit-2.1.4-py3-none-any.whl size=59221 sha256=0fa2d97074f619f123c6ec71706ba9e56007fe78d8462ec8cec7379dc52ede97\n",
-      "  Stored in directory: /home/jovyan/.cache/pip/wheels/83/cd/9c/8605a43f2310bfb74df791d943a9b3aef65377ed484de98bdc\n",
-      "  Building wheel for matplotlib-venn (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for matplotlib-venn: filename=matplotlib_venn-1.1.2-py3-none-any.whl size=45355 sha256=20ffa7c376507c3d25de21cf2f52005e406dd8b2973b381cb9fdbf4fba6d3fa7\n",
-      "  Stored in directory: /home/jovyan/.cache/pip/wheels/c4/16/4a/93374cd955bbe0553a8ce74db7f0fbd5fcc876e19fb78bd601\n",
-      "Successfully built bioinfokit matplotlib-venn\n",
-      "Installing collected packages: textwrap3, matplotlib-venn, adjustText, bioinfokit\n",
-      "Successfully installed adjustText-1.3.0 bioinfokit-2.1.4 matplotlib-venn-1.1.2 textwrap3-0.9.2\n"
+      "Requirement already satisfied: six in /opt/conda/lib/python3.11/site-packages (from patsy>=0.5.6->statsmodels->bioinfokit) (1.16.0)\n"
      ]
     }
    ],
@@ -1054,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1168,7 @@
        "Text(0, 0.5, 'PC2')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1199,7 +1187,7 @@
     "df_X_new_coord = pd.DataFrame(X_new_components)\n",
     "# adding the MEDV variable to df_X_new_coord\n",
     "df_X_new_coord = df_X_new_coord.assign(MEDV = boston.MEDV)\n",
-    "ax = df_X_new_coord.plot.scatter(x = 0, y = 1, c = ??, colormap=\"viridis\")\n",
+    "ax = df_X_new_coord.plot.scatter(x = 0, y = 1, c ='MEDV' , colormap=\"viridis\")\n",
     "ax.set_xlabel(\"PC1\")\n",
     "ax.set_ylabel(\"PC2\")"
    ]
@@ -1300,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1734,7 +1722,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1756,16 +1744,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7668348687111718"
+       "0.7668348687111717"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1794,17 +1782,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create a new X dataset including three PCs\n",
-    "X_three_pc = X_new_components[:,[??,??,??]]"
+    "X_three_pc = X_new_components[:,[0,1,2]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1815,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2231,7 +2219,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2244,16 +2232,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7041196910286294"
+       "0.7041196910286291"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2302,7 +2290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2412,7 +2400,7 @@
     "    }]\n",
     "\n",
     "grid_search = GridSearchCV(clf, param_grid, cv=3)\n",
-    "grid_search.fit(??, ??)\n",
+    "grid_search.fit(X, y)\n",
     "print(grid_search.best_params_)"
    ]
   },
@@ -2425,16 +2413,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f6f1c312ad0>"
+       "<matplotlib.collections.PathCollection at 0xffff2ed279d0>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2450,13 +2438,13 @@
     }
    ],
    "source": [
-    "k_pca_opt = KernelPCA(n_components = 2, kernel=grid_search.??['kpca__kernel'], \n",
+    "k_pca_opt = KernelPCA(n_components = 2, kernel=grid_search.best_params_['kpca__kernel'], \n",
     "                      gamma=grid_search.best_params_['kpca__gamma'], fit_inverse_transform=True)\n",
     "\n",
     "plt.figure(figsize=(11, 10))\n",
     "X_reduced = k_pca_opt.fit_transform(X)  \n",
     "plt.title('Optimal kPCA', fontsize=14)\n",
-    "plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=boston.??, cmap=\"viridis\")"
+    "plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=boston.MEDV, cmap=\"viridis\")"
    ]
   },
   {
@@ -2636,9 +2624,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (base)",
    "language": "python",
-   "name": "python3"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
